--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,13 @@
-when i save changes they are correct in onedrive but if i reload that same file its an old version  cached i assume
-
 sometimes when i open a file the text is over the line numbers
 
-scrolling is clumsy, text doesnt always move in the text window simetimes the cursor is outside the text windiw in the white space
+optimize for mobile.  when vertical, left than half of screen is editor.  i primarily use vertical because the keyboard covers mist of the screen when rotated horizontal
 
-file closer
+add new file capabilty
 
-save as
+add word wrap
 
+add file closer
 
+simple text buttons: new, open, save, save as, close
+
+ask to save on close (i sometimes forget to save)
